--- a/Engine/Calculator.csproj
+++ b/Engine/Calculator.csproj
@@ -44,6 +44,7 @@
     <Compile Include="MeanCalculator.cs" />
     <Compile Include="ICalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StandardDeviationCalculator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
