Bin counting now seems to work

--- a/Engine/Calculator.csproj
+++ b/Engine/Calculator.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CalculatorFactory.cs" />
+    <Compile Include="Histogram.cs" />
     <Compile Include="MeanCalculator.cs" />
     <Compile Include="ICalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
