--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -51,6 +51,7 @@
     <Compile Include="TestCalculator.cs" />
     <Compile Include="TestParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestSampleData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
