--- a/timeSeriesTask/TimeSeriesTask.csproj
+++ b/timeSeriesTask/TimeSeriesTask.csproj
@@ -48,5 +48,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Engine\Calculator.csproj">
+      <Project>{94caee31-5e0a-4a53-ae86-7b476c3b2017}</Project>
+      <Name>Calculator</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Parser\Parser.csproj">
+      <Project>{5ad0817b-995f-418a-bef2-83030534dda8}</Project>
+      <Name>Parser</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
